--- a/assets/src/scss/component/listings/_listing-map.scss
+++ b/assets/src/scss/component/listings/_listing-map.scss
@@ -36,9 +36,13 @@
                     text-decoration: none;
                 }
                 .atbdp-listings-title-block{
-                    .atbdp-no-margin{
-                        margin: 0;
+                    h3.atbdp-no-margin{
+                        margin: 0 0 10px;
+                        line-height: 1;
                     }
+                }
+                .osm-iw-location{
+                    margin-bottom: 6px;
                 }
             }
 
